--- a/package.json
+++ b/package.json
@@ -10,15 +10,19 @@
   },
   "author": "Salesforce Developers",
   "license": "ISC",
+  "type": "module",
   "engines": {
-    "node": "^20"
+    "node": "^22"
   },
   "dependencies": {
     "@fastify/compress": "^8.0.1",
     "@fastify/static": "^8.0.4",
+    "@fastify/websocket": "^11.0.2",
+    "dotenv": "^16.4.7",
+    "eventsource-client": "^1.1.3",
     "fastify": "^5.2.1"
   },
   "volta": {
-    "node": "20.18.0"
+    "node": "22.13.1"
   }
 }
