--- a/package.json
+++ b/package.json
@@ -19,8 +19,8 @@
     "@fastify/static": "^8.1.1",
     "@fastify/websocket": "^11.0.2",
     "dotenv": "^16.4.7",
-    "eventsource-client": "^1.1.3",
-    "fastify": "^5.2.1"
+    "fastify": "^5.2.1",
+    "salesforce-agent-api-client": "^1.0.0"
   },
   "volta": {
     "node": "22.13.1"
